2003-04-29  H.J. Lu <hjl@gnu.org>

	* ld-ia64/tlsbin.dd: Updated.
	* ld-ia64/tlsbin.rd: Likewise.
	* ld-ia64/tlsbin.sd: Likewise.
	* ld-ia64/tlsbin.td: Likewise.
	* ld-ia64/tlspic.rd: Likewise.
	* ld-ia64/tlspic.sd: Likewise.
	* ld-ia64/tlspic.td: Likewise.

2003-04-29  J"orn Rennecke <joern.rennecke@superh.com>

	* ld-selective/3.cc (start): New function.
	* ld-selective/4.cc: Likewise.
	* ld-selective/5.cc: Likewise.

2003-04-28  H.J. Lu <hjl@gnu.org>

	* ld-elfvers/vers.exp (picflag): Set PIC flag for compiler.
	(build_vers_lib): Support PIC.
	(build_vers_lib_no_pic): New. Change all calls to build_vers_lib
	to build_vers_lib_no_pic.
	(build_vers_lib_pic): New.
	Add tests vers26a, vers26b1, vers26b2 and vers26b3 for versioned
	definition vs. normal definition in different files.

	* ld-elfvers/vers26a.c: New file.
	* ld-elfvers/vers26a.dsym: Likewise.
	* ld-elfvers/vers26a.map: Likewise.
	* ld-elfvers/vers26a.ver: Likewise.
	* ld-elfvers/vers26b.c: Likewise.

	* ld-elfvers/vers26b.dsym: New empty file.
	* ld-elfvers/vers26b.ver: Likewise.

2003-04-27  H.J. Lu <hjl@gnu.org>

	* ld-elfvsb/elfvsb.dat: Updated.
	* ld-elfvsb/elfvsb.exp: Likewise.
	* ld-elfvsb/main.c: Likewise.
	* ld-elfvsb/sh1.c: Likewise.
	* ld-elfvsb/sh2.c: Likewise.

2003-04-26  Stephane Carrez  <stcarrez@nerim.fr>

	* ld-m68hc11/bug-3331.d: New test.
	* ld-m68hc11/bug-3331.s: New file.

2003-04-25  Nick Clifton <nickc@redhat.com>
            J"orn Rennecke <joern.rennecke@superh.com>

	* lib/ld-lib.exp (big_or_little_endian): Also check for -mb and -ml.

2003-04-24  J"orn Rennecke <joern.rennecke@superh.com>

	* ld-elfcomm/elfcomm.exp: Allow symbols to have '_' prepended.

2003-04-23  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* ld-sh/tlsbin-1.d, ld-sh/tlsbin-2.d, ld-sh/tlsbin-3.d,
	ld-sh/tlstpoff-1.d, ld-sh/tlstpoff-2.d: Update for removing
	unnecessary TLS relocs.

2003-04-23  J"orn Rennecke <joern.rennecke@superh.com>

	* ld-sh/sh64/crange3-cmpct.rd (Machine): Change to refer to SuperH.