@@ -1,3 +1,7 @@
+2003-05-02  Andreas Jaeger  <aj@suse.de>
+
+	* ld-elfvers/vers.exp (build_exec): Disable vers26b3 on x86-64-linux.
+
 2003-04-29  H.J. Lu <hjl@gnu.org>
 
 	* ld-ia64/tlsbin.dd: Updated.
